# mcdc

./: CMakeLists.txt
C/: CMakeLists.txt
C/binary/: CMakeLists.txt  binary.c  binary.h
C/binary/api/: CMakeLists.txt
C/binary/src/: CMakeLists.txt  binary.c
C/bubblesort/: CMakeLists.txt  bubblesort.c  bubblesort.h
C/function/: CMakeLists.txt  function.c  function.h
C/lib/: bubblesort.h  function.h  mcdc.h  print.h  solve.h  threads.h
C/main/: CMakeLists.txt  main.c
C/print/: CMakeLists.txt  print.c  print.h
C/solve/: CMakeLists.txt  solve.c  solve.h
C/src/: bubblesort.c  function.c  mcdc.c  solve.c  threads.c
C/threads/: CMakeLists.txt  threads.c  threads.h
Python/: mcdc.py
